# wretris

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  package-lock.json
src/: backend.rs  block.rs  board.rs  color_grid.rs  gameover.rs  lib.rs  lrd.rs  manual.rs  pos.rs  queue.rs  score.rs  tetris.rs  timer.rs
wasm_backend/: Cargo.toml
wasm_backend/src/: backend.rs  lib.rs  theme.rs
www/: index.html  index.js  package-lock.json  package.json
