[package]
name = "wasm-retris"
version = "0.1.0"
authors = ["genieCS <geniecs@github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
wasm_backend = { path = "./wasm_backend" }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.4"

[dependencies.cursive]
path = "../cursive/cursive"
default-features = false

[dependencies.cursive_buffered_backend]
path = "../cursive_buffered_backend"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "HtmlCanvasElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true