[package]
name = "wretris"
version = "0.2.1"
authors = ["genieCS <geniecs@github.com>"]
edition = "2018"
description = "w(asm) + r(ust) + (t)etris: Rust implementation of tetris using the Cursive library with wasm backend"
license = "MIT"
readme = "README.md"
keywords = ["tui", "cursive", "tetris", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.18"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.4"
js-sys = "0.3.64"

[dependencies.cursive]
git = "https://github.com/geniecs/cursive"
default = ["wasm-backend"]

[dependencies.web-sys]
version = "0.3.64"
features = [
    "HtmlCanvasElement",
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true